<resources>
    <string name="app_name">Secu3Droid</string>
    <string name="sensors_format">RPM: %1$d min-1\r\nPressure: %2$.2f kPa\r\nVoltage: %3$.2f V\r\nTemperature: %4$.2f °C\r\nAdvance angle: %5$+.2f °\r\nKnock level: %6$.2f V\r\nKnock retard: %7$+.2f °\r\nAir flow: %8$d\r\nFI valve: %9$d\r\nThrottle sensor: %10$d\r\nGas valve: %11$d\r\nPower Valve: %12$d\r\nCooling fan: %13$d\r\nStarter blocked: %14$d\r\nADD_IO1: %15$.2f\r\nADD_IO2: %16$.2f\r\nThrottle Position Sensor:%17$.2f\r\nChoke position: %18$.2f</string>
    <string name="sensors_raw_format">MAP Sensor data: %1$.2f V\r\nVoltage Sensor data: %2$.2f V\r\nTemperature Sensor data: %3$.2f V\r\nKnock Sensor data: %4$.2f V\r\nTPS Sensor data: %5$.2f V\r\nADD_IO1 Sensor data: %6$.2f V\r\nADD_IO2 data: %7$.2f V</string>
    <string name="diagnostics_input">Voltage: %1$.3f V\r\nMAP_S: %2$.3f V\r\nTEMP: %3$.3f V\r\nADD_IO1: %4$.3f V\r\nADD_IO2: %5$.3f V\r\nCARB: %6$d\r\nGAS_V: %7$d\r\nCKPS: %8$d\r\nREF_S: %9$d\r\nPS: %10$d\r\nBL: %11$d\r\nDE: %12$d\r\nKS_1: %13$.3f V\r\nKS_2: %14$.3f V\r\n</string>
    <string name="title_activity_param">Parameters</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_param">Parameters</string>
    <string name="pref_bluetooth_device_title">Choose Bluetooth Device</string>
    <string name="pref_bluetooth_device_summary">"Current device: %s"</string>
    <string name="pref_connection_retries_title">Connection retry number</string>
    <string name="pref_connection_retries_summary">Number of attempts before exiting: %s</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary"></string>
    <string name="pref_upload_immediately_title">Upload changes immediately</string>
    <string name="pref_upload_immediately_summary">When Secu-3 params changed</string>
    <string name="pref_write_log_title">Write log</string>
    <string name="pref_write_log_summary">Write log of sensor\'s data</string>
    <string name="pref_write_log_path_title">Path for storing logs</string>
    <string name="pref_write_log_path_summary">Directory where Secu3Droid should store logs. If empty, logs will be stored to %1$s</string>
    <string name="service_closed_because_connection_problem_notification_title">Secu3Droid stopped</string>
    <string name="service_closed_because_connection_problem_notification">"Reason: %s"</string>
    <string name="connection_problem_notification_title">Secu3: connection problem</string>
    <plurals name="connection_problem_notification">
        <item quantity="one">Will retry one more time before closing</item>
        <item quantity="other">Will retry %d more times before closing</item>
    </plurals>
    <string name="foreground_service_started_notification_title">Secu3Droid</string>
    <string name="foreground_service_started_notification">Secu3Droid service started</string>
    <string name="msg_bluetooth_unsupported">Bluetooth is not supported on your Android device</string>
    <string name="msg_bluetooth_disabled">Bluetooth is disabled</string>
    <string name="msg_bluetooth_secu3_unavaible">Cannot connect to Secu-3 device</string>
    <string name="msg_service_started">Secu3Droid… started</string>
    <string name="msg_service_stopped">Secu3Droid service… stopped</string>
    <string name="msg_service_stopped_by_problem">"Cannot start: %s"</string>
    <string name="msg_service_already_started">Secu3Droid… is already on</string>
    <string name="msg_too_many_connection_problems">Too many connection problems</string>
    <string name="status_offline">Offline</string>
    <string name="status_online">Online</string>
    <string name="title_activity_errors">Errors</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_errors">Errors</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="menu_diagnostics_warning_title">Disconnect ignition coils before entering diagnostics mode! Ignoring may cause coils breakage!</string>
    <string name="menu_params_download_title">Download</string>
    <string name="menu_params_upload_title">Upload</string>
    <string name="menu_params_save_eeprom_title">Save</string>
    <string name="menu_errors_read">Read saved</string>
    <string name="menu_errors_write">Write saved</string>
    <string name="about_title">About</string>
    <string name="about_version">Secu3Droid version</string>
    <string name="about_copyright_1">Copyright © 2013 Maksim Levin</string>
    <string name="about_copyright_2">Copyright © 2013 Secu3Droid Project</string>
    <string name="about_app_desc">Secu3Droid is an application for managing Secu-3 ignition system. Secu-3 is an open source, free engine control unit, see <a href="http://secu-3.org"><b>http://secu-3.org</b></a>"</string>
    <string name="about_license">It is open source software distributed free of charge under the terms of the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"><b>GNU General Public License</b></a>.</string>
    <string name="about_sources">The source code is available from Git repository on the project website: https://github.com/mmlevin/secu3droid</string>
    <string-array name="params_fragments_titles">
        <item>Start</item>
        <item>Angles</item>
        <item>Idling</item>
        <item>Functions</item>
        <item>Temperature</item>
        <item>Carburetor</item>
        <item>ADC Errors Corr.</item>
        <item>CKPS</item>
        <item>Miscellaneous</item>
        <item>Choke control</item>
    </string-array>
    <string-array name="diagnostics_fragments_title">
        <item>Inputs</item>
        <item>Outputs</item>
        <item>Chart</item>
    </string-array>
    <string name="units_rpm">min-1</string>
    <string name="units_zero">0</string>
    <string name="units_degree">°</string>
    <string name="units_sec">sec</string>
    <string name="units_pressure_kpa">kPa</string>
    <string name="units_volts">V</string>
    <string name="units_volts_per_kpa">V/kPa</string>
    <string name="units_ms">ms</string>
    <string name="units_degrees_celcius">°C</string>
    <string name="starter_off_title">RPM when starter will be turned off:</string>
    <string name="starter_map_abandon_title">RPM when switching from start map:</string>
    <string name="angles_min_angle_title">Minimal advance angle:</string>
    <string name="angles_max_angle_title">Maximal advance angle:</string>
    <string name="angles_angle_decrement_step_title">Angle decrement step:</string>
    <string name="angles_angle_increment_step_title">Angle increment step:</string>
    <string name="angles_zero_angle_title">Zero advance angle:</string>
    <string name="angles_octane_correction_title">Octane correction:</string>
    <string name="idlreg_ifac1_title">Positive regulator\'s factor:</string>
    <string name="idlreg_ifac2_title">Negative regulator\'s factor:</string>
    <string name="idlreg_minimal_angle_title">Minimal regulation limit:</string>
    <string name="idlreg_target_rpm_title">Goal RPM:</string>
    <string name="idlreg_rpm_sensitivity_title">Dead band of RPM:</string>
    <string name="idlreg_use_idle_regulator_title">Use regulator</string>
    <string name="funset_lower_pressure_title">Lower pressure value:</string>
    <string name="funset_upper_pressure_title">Upper pressure value:</string>
    <string name="funset_map_sensor_offset_title">MAP Sensor Curve offset:</string>
    <string name="funset_map_sensor_gradient_title">MAP sensor curve gradient:</string>
    <string name="funset_maps_set_gasoline_title">Maps set for gasoline:</string>
    <string name="funset_maps_set_gas_title">Maps set for gas:</string>
    <string name="temper_fan_on_title">Fan turn on threshold:</string>
    <string name="temper_fan_off_title">Fan turn off threshold:</string>
    <string name="temper_use_temp_sensor_title">Use coolant temperature sensor</string>
    <string name="temper_use_pwm_title">Control cooling fan using PWM</string>
    <string name="temper_use_table">Use table to define sensor\'s curve</string>
    <string name="carbur_overrun_lower_threshold_gasoline_title">Idle cut-off valve lower threshold for gasoline:</string>
    <string name="carbur_overrun_upper_threshold_gasoline_title">Idle cut-off valve upper threshold for gasoline:</string>
    <string name="carbur_overrun_lower_threshold_gas_title">Idle cut-off valve lower threshold for gas:</string>
    <string name="carbur_overrun_upper_threshold_gas_title">Idle cut-off valve upper threshold for gas:</string>
    <string name="carbur_overrun_valve_delay">Valve turn off delay:</string>
    <string name="carbur_epm_valve_on_pressure_title">PVS turn on threshold:</string>
    <string name="carbur_sensor_inverse_title">Inversion of throttle position switch</string>
    <string name="miscel_baudrate_title">Data transmission baudrate:</string>
    <string name="miscel_period_title">Data packets transmission period:</string>
    <string name="miscel_ignition_cutoff_title">Enable ignition cutoff</string>
    <string name="miscel_ignition_cutoff_rpm_title">Ignition cutoff RPM:</string>
    <string name="miscel_hall_output_start_title">Hall output pulse start relative to TDC (in wheel teeth):</string>
    <string name="miscel_hall_output_delay_title">Hall output pulse duration (in wheel teeth):</string>
    <string name="ckps_ckp_edge_title">CKPS edge</string>
    <string name="ckps_merge_outputs">Merge signals to single output</string>
    <string name="ckps_cogs_number_title">Number of wheel\'s teeth:</string>
    <string name="ckps_missing_cogs_number_title">Number of missing teeth:</string>
    <string name="ckps_ref_s_edge_title">REF_S edge</string>
    <string name="ckps_cogs_before_tdc_title">Number of teeth before TDC:</string>
    <string name="ckps_engine_cylynders_title">Number of engine cylynders:</string>
    <string name="ckps_ignition_pulse_delay_title">Duration of igniter\'s pulse driver in teeth of wheel:</string>
    <string name="adccor_map_sensor_factor_title">MAP Sensor factor:</string>
    <string name="adccor_map_sensor_correction_title">MAP Sensor correction:</string>
    <string name="adccor_voltage_sensor_factor_title">Voltage Sensor factor:</string>
    <string name="adccor_voltage_sensor_correction_title">Voltage Sensor correction:</string>
    <string name="adccor_temper_sensor_factor_title">Temperature Sensor factor:</string>
    <string name="adccor_temper_sensor_correction">Temperature Sensor correction:</string>
    <string name="idlreg_turn_on_temp_title">Regulator turn on temperature:</string>
    <string name="funset_tps_curve_offset_title">TPS curve offset:</string>
    <string name="units_percent_per_volts">%/V</string>
    <string name="funset_tps_curve_gradient_title">TPS curve gradient:</string>
    <string name="carbur_tps_threshold_title">TPS threshold:</string>
    <string name="units_percents">%</string>
    <string name="adccor_tps_sensor_factor_title">TPS Sensor factor:</string>
    <string name="adccor_tps_sensor_correction_title">TPS Sensor correction:</string>
    <string name="adccor_addi1_sensor_factor_title">ADD_IO1 Sensor factor:</string>
    <string name="adccor_addi1_sensor_correction_title">ADD_IO1 Sensor correction:</string>
    <string name="adccor_addi2_sensor_factor_title">ADD_IO2 Sensor factor:</string>
    <string name="adccor_addi2_sensor_correction_title">ADD_IO2 Sensor correction:</string>
    <string name="choke_steps_title">Number of SM steps:</string>
    <string name="choke_testing_title">TEST</string>
    <string name="choke_manual_title">Manual choke control:</string>
    <string name="choke_manual_step_down">Less</string>
    <string name="choke_manual_step_up">More</string>
</resources>