<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false">
    
	<RelativeLayout
	    android:id="@+id/layout1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/miscel_baudrate_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <Spinner
	        android:id="@+id/miscelBaudrateSpinner"
	        android:spinnerMode="dialog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView1" />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/miscelBaudrateSpinner"
	        android:text="@string/miscel_period_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <EditText
	        android:id="@+id/miscelPeriodEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView2"
	        android:ems="10"
	        android:inputType="number"
	        android:text="@string/units_zero" />

	    <CheckBox
	        android:id="@+id/miscelEnableIgnitionCutoffCheckBox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/miscelPeriodEditText"
	        android:text="@string/miscel_ignition_cutoff_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <EditText
	        android:id="@+id/miscelIgnitionCutoffRPMEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView3"
	        android:ems="10"
	        android:inputType="number"
	        android:text="@string/units_zero" >

	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/miscelEnableIgnitionCutoffCheckBox"
	        android:text="@string/miscel_ignition_cutoff_rpm_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/miscelIgnitionCutoffRPMEditText"
	        android:text="@string/miscel_hall_output_start_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <EditText
	        android:id="@+id/miscelHallOutputStartEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView4"
	        android:ems="10"
	        android:inputType="number"
	        android:text="@string/units_zero" />

	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/miscelHallOutputStartEditText"
	        android:text="@string/miscel_hall_output_delay_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <EditText
	        android:id="@+id/miscelHallOutputDelayEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView5"
	        android:ems="10"
	        android:inputType="number"
	        android:text="@string/units_zero" />

	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/miscelPeriodEditText"
	        android:layout_alignBottom="@+id/miscelPeriodEditText"
	        android:layout_toRightOf="@+id/miscelPeriodEditText"
	        android:text="@string/units_ms"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/miscelIgnitionCutoffRPMEditText"
	        android:layout_alignBottom="@+id/miscelIgnitionCutoffRPMEditText"
	        android:layout_toRightOf="@+id/miscelIgnitionCutoffRPMEditText"
	        android:text="@string/units_rpm"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	</RelativeLayout>
	
</ScrollView>