<?xml version="1.0" encoding="utf-8"?>
<!-- 
  Secu3Droid - An open source, free manager for SECU-3 engine
  control unit
  Copyright (C) 2013 Maksim M. Levin. Russia, Voronezh
  
  SECU-3  - An open source, free engine control unit
  Copyright (C) 2007 Alexey A. Shabelnikov. Ukraine, Gorlovka
 
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
  contacts:
             http://secu-3.org
             email: mmlevin@mail.ru
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="Starter"
    android:fadeScrollbars="false">
    
	<RelativeLayout
	    android:id="@+id/chokeLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	<TextView
	    android:id="@+id/chokeTextView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/choke_steps_title"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<EditText
	    android:id="@+id/chokeStepsEditText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/chokeTextView1"
	    android:ems="10"
	    android:inputType="number"
	    android:text="@string/units_zero" />

	<ToggleButton
	    android:id="@+id/chokeTestButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/chokeStepsEditText"
	    android:layout_toRightOf="@+id/chokeStepsEditText"
	    android:textOff="@string/choke_testing_title"
	    android:textOn="@string/choke_testing_title" />

	<TextView
	    android:id="@+id/chokeTextView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/chokeStepsEditText"
	    android:text="@string/choke_manual_title"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<Button
	    android:id="@+id/chokeManualStepDown"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/chokeTextView2"
	    android:text="@string/choke_manual_step_down" />

	<Button
	    android:id="@+id/chokeManualStepUp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/chokeTextView2"
	    android:layout_toRightOf="@+id/chokeManualStepDown"
	    android:text="@string/choke_manual_step_up" />
	
	</RelativeLayout>

</ScrollView>